--- a/styles/style.scss
+++ b/styles/style.scss
@@ -1,10 +1,46 @@
 $red: #FF0000;
 $blue: #00FF00;
 
+.clearfix:after {
+     content: " ";
+     visibility: hidden;
+     display: block;
+     height: 0;
+     clear: both;
+}
+
+*, *:before, *:after {
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+   }
+
+* {
+	margin:0;
+	padding: 0;
+}
+
 
 body {
 	font: Helvetica;
 	color: $red;
 	background-color: $blue;
 	font-size: 28px;
+
+	.wrapper {
+
+		background-color: salmon;
+		margin: 0 auto;
+		padding: 25px;
+		width: 600px;
+		border-radius: 25px;
+		box-shadow: 3px 3px 3px black;
+
+		h1 {
+			width: 50%;
+			margin: 0 auto;
+			color: deepskyblue;
+		}
+	}
 }
+
+
+
