--- a/styles/style.css
+++ b/styles/style.css
@@ -19,8 +19,8 @@
 
 body {
   font: Helvetica;
-  color: red;
-  background-color: lime;
+  color: khaki;
+  background-color: lavender;
   font-size: 28px;
 }
 body .wrapper {
