--- a/Small Project/main.styl
+++ b/Small Project/main.styl
@@ -16,6 +16,13 @@ input[type=reset],input[type=submit]{-webkit-appearance:button;cursor:pointer;}b
    clear: both;
 }
 
+/*
+ *	BorderBox
+ */
+*, *:before, *:after {
+    -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
+}
+
 .wrapper
 	max-width 1000px
 	margin 0 auto
